<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dataset"
        android:icon="@drawable/dataset"
        android:title="@string/title_predict" />

    <item
        android:id="@+id/navigation_fitur"
        android:icon="@drawable/fitur"
        android:title="@string/title_fitur" />

    <item
        android:id="@+id/navigation_model"
        android:icon="@drawable/model"
        android:title="@string/title_model" />

    <item
        android:id="@+id/navigation_predict"
        android:icon="@drawable/baseline_analytics_24"
        android:title="@string/title_predict" />
</menu>