<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!-- AppBar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:layout_marginTop="30dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Model"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>

    <!-- Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:clipToPadding="false"
        android:paddingBottom="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/purple_200" >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardArsitektur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <!-- Header -->
                    <LinearLayout
                        android:id="@+id/sectionArsitektur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="Arsitektur Model"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/black" />
                        <ImageView
                            android:id="@+id/iconArsitektur"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvArsitektur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/arsitektur"
                        android:textSize="20sp"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:justificationMode="inter_word"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card Preprocessing -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardPreprocessing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <!-- Header -->
                    <LinearLayout
                        android:id="@+id/sectionPreprocessing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="1. Pre-processing"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/black" />

                        <ImageView
                            android:id="@+id/iconPreprocessing"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutPreprocessingContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/normalisasi" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/normalisasi"
                            android:textSize="20sp"
                            android:layout_marginTop="8dp"
                            android:lineSpacingExtra="4dp"
                            android:justificationMode="inter_word"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black" />
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/preprocessing" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/preparation"
                            android:textSize="20sp"
                            android:layout_marginTop="8dp"
                            android:lineSpacingExtra="4dp"
                            android:justificationMode="inter_word"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!-- Card Modeling -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardModeling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <!-- Header -->
                    <LinearLayout
                        android:id="@+id/sectionModeling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true">
                        <TextView
                            android:layout_width="322dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="2. Modeling"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                        <ImageView
                            android:id="@+id/iconModeling"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layoutModelingContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/modeling" />
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/plot" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/modeling"
                            android:textSize="20sp"
                            android:layout_marginTop="8dp"
                            android:lineSpacingExtra="4dp"
                            android:justificationMode="inter_word"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black" />
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/fitmodel" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mse"
                            android:textSize="20sp"
                            android:layout_marginTop="8dp"
                            android:lineSpacingExtra="4dp"
                            android:justificationMode="inter_word"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black" />
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/latih" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/latih"
                            android:textSize="20sp"
                            android:layout_marginTop="8dp"
                            android:lineSpacingExtra="4dp"
                            android:justificationMode="inter_word"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
